ext/standard/ftp_fopen_wrapper.c
@@ -716,6 +716,9 @@ php_stream * php_stream_ftp_opendir(php_stream_wrapper *wrapper, const char *pat
 	if (result > 299 || result < 200)
 		goto opendir_errexit;
 
+	// tmp_line isn't relevant after the php_fopen_do_pasv().  
+	tmp_line[0] = '\0';
+
 	/* set up the passive connection */
 	portno = php_fopen_do_pasv(stream, ip, sizeof(ip), &hoststart TSRMLS_CC);
 
@@ -723,34 +726,35 @@ php_stream * php_stream_ftp_opendir(php_stream_wrapper *wrapper, const char *pat
 		goto opendir_errexit;
 	}
 
-	php_stream_printf(stream TSRMLS_CC, "NLST %s\r\n", (resource->path != NULL ? resource->path : "/"));
-	
 	/* open the data channel */
 	if (hoststart == NULL) {
 		hoststart = resource->host;
 	}
+
 	datastream = php_stream_sock_open_host(hoststart, portno, SOCK_STREAM, 0, 0);
 	if (datastream == NULL) {
 		goto opendir_errexit;
 	}
 
-	result = GET_FTP_RESULT(stream);
-	if (result != 150 && result != 125) {
-		/* Could not retrieve or send the file 
-		 * this data will only be sent to us after connection on the data port was initiated.
-		 */
-		php_stream_close(datastream);
-		datastream = NULL;
-		goto opendir_errexit;	
-	}
-	
 	php_stream_context_set(datastream, context);
-
 	if (use_ssl_on_data && (php_stream_xport_crypto_setup(datastream,
 			STREAM_CRYPTO_METHOD_SSLv23_CLIENT, NULL TSRMLS_CC) < 0 ||
 			php_stream_xport_crypto_enable(datastream, 1 TSRMLS_CC) < 0)) {
 
 		php_stream_wrapper_log_error(wrapper, options TSRMLS_CC, "Unable to activate SSL mode");
+		php_stream_close(datastream);
+		datastream = NULL;
+		goto opendir_errexit;	
+	}
+
+
+	php_stream_printf(stream TSRMLS_CC, "NLST %s\r\n", (resource->path != NULL ? resource->path : "/"));
+
+	result = GET_FTP_RESULT(stream);
+	if (result != 150 && result != 125) {
+		/* Could not retrieve or send the file
+		 * this data will only be sent to us after connection on the data port was initiated.
+		 */
 		php_stream_close(datastream);
 		datastream = NULL;
 		goto opendir_errexit;
